<resources>
    <string name="app_name">Food Ordering System</string>
    <string name="table">Table</string>
    <string name="settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="table_title">Table Number</string>
    <string name="table_message">Enter the table number</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="arrow_navigation">arrow navigation</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="expire_hour">Expire Hour</string>
    <string name="expire_minute">Expire Minute</string>
    <string name="delete_menu_type">Delete Menu Type</string>
    <string name="delete_menu_item">Delete Menu Item</string>
    <string name="delete_order_item">Delete Order Item</string>
    <string name="confirm_delete_menu_type">Are you sure want to delete it?</string>
    <string name="confirm_delete_menu_item">Are you sure want to delete it?</string>
    <string name="confirm_delete_order_item">Are you sure want to delete it?</string>
    <string name="rm">RM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_menu_type">Enter The Menu Type</string>
    <string name="menu_type">Menu Type</string>
    <string name="upload_image">Upload Image</string>
    <string name="available">Available</string>
    <string name="takeaway">Takeaway</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="food_item_price">Food Item Price</string>
    <string name="food_item_ingredient">Food Item Ingredient</string>
    <string name="loading">Loading</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="enter_cancel_reason">Enter Cancel Reason</string>
    <string name="info">INFO</string>
    <string name="item">ITEM</string>

    <string name="table_number">Table: %s</string>
    <string name="date">Date: %s</string>
    <string name="status">Status: %s</string>
    <string name="sub_total">SubTotal: %s</string>
    <string name="service_charge">Service Charge: %s</string>
    <string name="round_up">Round up: %s</string>
    <string name="total_price">Total Price: %s</string>
    <string name="total_quantity">Total Quantity: %s</string>

</resources>