<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/detail_menu_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#FFCCCCCC"
                android:src="@drawable/ic_photo"
                android:contentDescription="@string/upload_image"
                android:layout_marginHorizontal="16dp"
                android:elevation="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_item_name_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_menu_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/menu_item_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Food Item Name"
                    android:inputType="text|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/menu_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                android:background="@drawable/border_background"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_item_name_textField"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_item_price_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_type_spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/menu_item_price_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Food Item Price"
                    android:inputType="numberDecimal|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu_item_ingredient_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:fitsSystemWindows="true"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_item_price_textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/menu_item_ingredient_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="4"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:overScrollMode="ifContentScrolls"
                    android:scrollbarStyle="insideInset"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:hint="Food Item Ingredient"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/menu_item_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/available"
                android:textSize="18sp"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_item_ingredient_textField" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/menu_item_takeaway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/takeaway"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_item_ingredient_textField" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:elevation="8dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="ADD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menu_item_available" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>